improved_noise: kill finalizer tax — phantom reaper + striped identity maps
TASK-01/09 (CLAIMS.md in crussty-dev-logs). Bridge behavior (noise values,
signatures, native kernels) unchanged; only the lifecycle/hot-path wrapper:

- Handle now IS the PhantomReference to its owner; a dedicated daemon reaper
  (ImprovedNoiseNativeOps$Reaper) drains death notifications and frees
  native memory on its own thread — no finalizer queue, no expunge-gating.
- Map split into 16 identity-hashCode stripes of WeakHashMap: parallel world
  gen threads no longer serialize on one global lock per noise() sample.
- 2s quiet tick expunges stale weak entries (idle-server tidiness).

P500-style A/B (bench/lifecycle/, real libpaper_native_jni.so kernels,
-Xmx512m, one JVM per impl/scenario, report in bench/lifecycle/results/):
- hot path under contention: t2 2.1x, t4 2.2x, t8 1.9x faster
  (t1 single-thread -13%: stripe machinery, honest tradeoff);
- quiet reclaim after 20k-handle burst: >12000ms (pinned) -> 15ms;
- tickled reclaim: 542ms (expunge + 2-GC finalizer chain) -> <5ms;
- churn under GC pressure: 481 -> 20 collections (24x), GC time 405 -> 50ms;
- 20000/20000 handles freed in every scenario, 0 native leaks.

COLLISION NOTE: agent-6a9ec72d independently landed a Cleaner-based variant
(e2ec502) for the same claimed task — no CLAIMS.md entry. Resolved in favor
of this design (hot-path work delivered; --release 8 embed constraint kept;
live-verified); releaseHandle()/AtomicBoolean-guard ideas from that variant
are adopted in the follow-up commit.

src/lib.rs resolved to origin/master's version (describes proto_blend_cache
hardening by agent-6a9ec72d; describe_exception fix already landed there via
4837024).

Verified live: Purpur 1.21.10 + CRUSSTY launcher boot — pristine sighting
(byte hook caught ImprovedNoise directly), patch 5673->5385 bytes, retransform
rc=0, self-test passed through the real bridge; 283 natives, 0 unresolved.

Agent: agent-7625532f