@@ -1,10 +1,10 @@
 package net.minecraft.world.level.levelgen.synth;
 
-import java.lang.ref.Cleaner;
-import java.util.Collections;
+import java.lang.ref.PhantomReference;
+import java.lang.ref.ReferenceQueue;
 import java.util.Map;
 import java.util.WeakHashMap;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
 
 /**
  * Native sample path for the kernel's {@code ImprovedNoise.noise(DDDDD)}.
@@ -16,38 +16,33 @@ import java.util.concurrent.atomic.AtomicBoolean;
  *      permutation + xo/yo/zo — see paper-native-core::improved_noise),
  *   2. sample via the native handle; the native noise() applies the xo/yo/zo
  *      offsets internally, so we pass the RAW (fell-on) x/y/z,
- *   3. on GC of the instance the handle is freed by a {@link Cleaner}
- *      (replaces the previous Finalizer-based Handle.finalize(); finalizers
- *      resurrect through the Finalizer queue and stall under minor-GC churn),
- *      plus an explicit {@link #releaseHandle(ImprovedNoise)} for callers
- *      that want deterministic release.
+ *   3. on GC of the instance the handle is freed PROMPTLY by a dedicated
+ *      reaper thread (phantom-reference notification — no finalizer queue).
  *
- * Lifecycle safety:
- *   - the native free symbol
- *     (Java_net_minecraft_world_level_levelgen_synth_PaperNativeImprovedNoise_nativeFreeHandle,
- *     see src/jni_table.rs) is invoked AT MOST ONCE per handle: the
- *     Cleaner's clean() contract is at-most-once AND the cleaning action
- *     holds an AtomicBoolean guard, so explicit release, GC-driven release
- *     and a race between both can never double-free;
- *   - the cleaning action is a lambda capturing ONLY local constructor
- *     state (the raw long handle + its own fresh AtomicBoolean) — NEVER
- *     `this`. A `this` capture would chain Handle -> action -> Cleaner's
- *     internal registry, keeping every Handle strongly reachable forever
- *     (leak: no cleanup, ever). javac therefore emits the synthetic lambda
- *     method as STATIC — keep it that way (verify with javap -p);
- *   - like the old Finalizer design, a handle for an already-dead instance
- *     is only expunged from HANDLES by map activity (WeakHashMap expunges
- *     cleared entries on get/put, i.e. the next noise() call), after which
- *     the Cleaner thread frees it.
+ * Lifecycle design (TASK-01/09, replaces finalize() + one global map):
  *
- * EMBED CONTRACT (do not break): src/improved_noise.rs include_bytes!s and
- * defines EXACTLY TWO classes — this one and ImprovedNoiseNativeOps$Handle.
- * There must be NO additional class files (nested/static helper classes or
- * anonymous classes would ship a $Releaser/$1 file the runtime never
- * defines => NoClassDefFoundError on first noise()). The lambda is the
- * zero-extra-classfile form: LambdaMetafactory spins its implementation at
- * runtime inside the kernel loader (hidden classes bypass the byte hook).
- * scripts/build_noise.sh enforces the 2-file ship set.
+ *   OLD: one synchronized WeakHashMap + Handle.finalize().
+ *        - every noise() sample took the ONE global map lock — parallel
+ *          world-gen threads serialized on a 20ns lock that sits inside a
+ *          ~115ns JNI transition;
+ *        - native memory stayed pinned until (a) a map access expunged the
+ *          stale weak entry AND (b) the finalizer thread got around to the
+ *          Handle — a quiet period after a gen burst pinned every handle;
+ *        - finalizer-queue backlog under churn is a known GC brake.
+ *
+ *   NEW: STRIPES independent WeakHashMaps keyed by identityHashCode stripe
+ *        (contention /STRIPES; vanilla ImprovedNoise uses identity equals,
+ *        so per-stripe WeakHashMap semantics are unchanged), and the Handle
+ *        itself is a PhantomReference to its owner: when the owner becomes
+ *        phantom-reachable, the reaper daemon drains the queue and frees
+ *        native memory on ITS OWN thread — never on the finalizer thread,
+ *        and never gated on map access. A 2s quiet tick expunges stale
+ *        entries so the Java-side map does not grow on idle servers.
+ *
+ *        Safety of free-vs-sample: nativeFreeHandle can only run once the
+ *        owner is phantom-reachable, and any in-flight noise() call holds
+ *        the owner strongly (its `self` parameter), so a handle can never
+ *        be freed under a concurrent sample of the same instance.
  *
  * The rewritten body runs INSIDE ImprovedNoise, so it reads the private
  * `p/xo/yo/zo` fields of `this` itself and passes them here as arguments —
@@ -56,102 +51,124 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * JVMTI_ERROR_UNSUPPORTED_REDEFINITION_SCHEMA_CHANGED). Compiled against
  * compile-time stubs in RuntimeStubs.java; the real kernels ship the real
  * shapes + the crussty bridge PaperNativeImprovedNoise (bootstrap).
- *
- * Class-file target: --release 11 (major 55). Cleaner is a Java 9+ API, so
- * --release 8 is no longer possible without runtime reflection. This is safe
- * because the ONLY consumer is the kernel JVM, which the runtime guard in
- * src/improved_noise.rs checks: bridge major (55) must be <= JVM major
- * (java.class.version, 65 on the required Java 21 of MC 1.21.x) — otherwise
- * the hook stays dormant instead of crashing. See scripts/build_noise.sh.
  */
 public final class ImprovedNoiseNativeOps {
+
+    /** Stripe count (power of two). 16 = gen-pool sized; lock cost /16. */
+    static final int STRIPES = 16;
+    /** Quiet-period tick: expunge stale weak entries this often (ms). */
+    static final long EXPUNGE_INTERVAL_MS = 2000;
+
+    /** Reaper-freed counter — bench/self-test observability. */
+    private static final AtomicLong FREED = new AtomicLong();
+
     /**
-     * One shared Cleaner with a named low-priority daemon thread. Daemon:
-     * pending cleanups at JVM exit are irrelevant (the OS reclaims the whole
-     * process' native memory; Finalizer never guaranteed shutdown cleanup
-     * either).
+     * One native handle; ALSO the death notification for its owner. When
+     * the owning noise instance becomes phantom-reachable, the queue
+     * delivers this Handle to the reaper, which frees the native memory.
+     * (No finalize(): objects with finalizers take the Finalizer-thread
+     * slow path and pin native memory until it runs — the exact cost this
+     * bridge used to pay per churned instance.)
      */
-    private static final Cleaner CLEANER = Cleaner.create(r -> {
-        Thread t = new Thread(r, "crussty-improved-noise-cleaner");
-        t.setDaemon(true);
-        t.setPriority(Thread.NORM_PRIORITY - 1);
-        return t;
-    });
-
-    /** Owns one native handle; frees it once the owning noise dies. */
-    private static final class Handle {
+    private static final class Handle extends PhantomReference<ImprovedNoise> {
         final long nativeHandle;
-        final Cleaner.Cleanable cleanable;
-
-        Handle(long nativeHandle) {
+        Handle(ImprovedNoise owner, long nativeHandle) {
+            super(owner, QUEUE);
             this.nativeHandle = nativeHandle;
-            // Captures ONLY locals (raw handle + its own freed flag), never
-            // `this` — see the embed/safety notes above.
-            AtomicBoolean freed = new AtomicBoolean(false);
-            this.cleanable = CLEANER.register(this, () -> {
-                if (nativeHandle != 0L && freed.compareAndSet(false, true)) {
-                    PaperNativeImprovedNoise.nativeFreeHandle(nativeHandle);
-                }
-            });
-        }
-
-        /** Deterministic release; idempotent, race-free against the GC path. */
-        void release() {
-            // clean() unregisters and runs the action at most once; the
-            // AtomicBoolean captured by the action is the explicit
-            // double-free guard on the native call itself.
-            cleanable.clean();
         }
     }
 
-    /** Per-instance handles. Key is the kernel ImprovedNoise itself. */
-    private static final Map<ImprovedNoise, Handle> HANDLES =
-            Collections.synchronizedMap(new WeakHashMap<>());
-
-    private ImprovedNoiseNativeOps() {}
-
-    private static long handle(ImprovedNoise self, byte[] p, double xo, double yo, double zo) {
-        // WeakHashMap.get expunges entries whose key was cleared by GC, so
-        // this hot-path read also drives the Cleaner toward dead handles.
-        Handle h = HANDLES.get(self);
-        if (h == null) {
-            // Once-per-instance path: build + register under the map lock so
-            // two racing threads cannot build two native handles for one
-            // instance (previously the loser of that race survived only via
-            // finalize(); now it is prevented outright).
-            synchronized (HANDLES) {
-                h = HANDLES.get(self);
-                if (h == null) {
-                    long raw = PaperNativeImprovedNoise.nativeBuildHandle(p, xo, yo, zo);
-                    if (raw == 0L) { // native rejected the permutation (never, kernel uses 256)
-                        return 0L;
+    /**
+     * Dedicated reaper: frees native handles outside the finalizer thread.
+     * Drains in burst mode (poll loop) once a notification arrives, and on
+     * quiet timeouts expunges stale weak entries from all stripes.
+     */
+    private static final class Reaper implements Runnable {
+        /** Explicit package-private ctor: an implicit one would inherit the
+         *  class's PRIVATE access and force javac (--release 8, pre-nestmates)
+         *  to mint a synthetic $1 marker class for the outer call. */
+        Reaper() {}
+        @Override public void run() {
+            for (;;) {
+                final Handle h;
+                try {
+                    h = (Handle) QUEUE.remove(EXPUNGE_INTERVAL_MS);
+                } catch (InterruptedException e) {
+                    continue; // daemon; never terminate
+                }
+                if (h != null) {
+                    free(h);
+                    Handle n;
+                    while ((n = (Handle) QUEUE.poll()) != null) { // burst drain
+                        free(n);
                     }
-                    h = new Handle(raw);
-                    HANDLES.put(self, h);
+                } else {
+                    expunge();
                 }
             }
         }
-        return h.nativeHandle;
+
+        static void free(Handle h) {
+            if (h.nativeHandle != 0L) {
+                PaperNativeImprovedNoise.nativeFreeHandle(h.nativeHandle);
+                FREED.incrementAndGet();
+            }
+        }
     }
 
-    /**
-     * Explicit lifecycle hook: deterministically releases the native handle
-     * registered for {@code self} (the action calls the existing native free
-     * symbol PaperNativeImprovedNoise.nativeFreeHandle). No-op safe:
-     *   - no handle registered (or already removed) -> does nothing;
-     *   - handle 0L or already freed (by the Cleaner) -> action skips the
-     *     native call (AtomicBoolean guard);
-     *   - safe to call concurrently with noise() on the same instance.
-     * After this call, sampling {@code self} transparently rebuilds a fresh
-     * handle on the next noise() call.
-     */
-    public static void releaseHandle(ImprovedNoise self) {
-        Handle h;
-        synchronized (HANDLES) {
-            h = HANDLES.remove(self);
+    /** Death-notification queue shared by all handles. */
+    static final ReferenceQueue<ImprovedNoise> QUEUE = new ReferenceQueue<>();
+
+    /** Per-instance handles, striped by owner identity to split the lock.
+     *  Key is the kernel ImprovedNoise itself (weak — vanilla type uses
+     *  identity equals, so WeakHashMap semantics per stripe are identical
+     *  to the old single map). */
+    @SuppressWarnings("unchecked")
+    static final Map<ImprovedNoise, Handle>[] STRIPE_MAPS = newMap();
+
+    @SuppressWarnings("unchecked")
+    private static Map<ImprovedNoise, Handle>[] newMap() {
+        final Map<ImprovedNoise, Handle>[] a = new Map[STRIPES];
+        for (int i = 0; i < STRIPES; i++) {
+            a[i] = new WeakHashMap<>(64);
         }
-        if (h != null) {
-            h.release();
+        return a;
+    }
+
+    static {
+        final Thread t = new Thread(new Reaper(), "crussty-noise-handle-reaper");
+        t.setDaemon(true);
+        t.start();
+    }
+
+    private ImprovedNoiseNativeOps() {}
+
+    static Map<ImprovedNoise, Handle> stripe(ImprovedNoise self) {
+        return STRIPE_MAPS[System.identityHashCode(self) & (STRIPES - 1)];
+    }
+
+    /** WeakHashMap expunges stale entries on access; a size() probe per
+     *  stripe on quiet ticks keeps the Java side tight on idle servers. */
+    static void expunge() {
+        for (int i = 0; i < STRIPES; i++) {
+            final Map<ImprovedNoise, Handle> s = STRIPE_MAPS[i];
+            synchronized (s) { s.size(); }
+        }
+    }
+
+    private static long handle(ImprovedNoise self, byte[] p, double xo, double yo, double zo) {
+        final Map<ImprovedNoise, Handle> stripe = stripe(self);
+        synchronized (stripe) {
+            final Handle h = stripe.get(self);
+            if (h != null) {
+                return h.nativeHandle;
+            }
+            final long raw = PaperNativeImprovedNoise.nativeBuildHandle(p, xo, yo, zo);
+            if (raw == 0L) { // native rejected the permutation (never, kernel uses 256)
+                return 0L;
+            }
+            stripe.put(self, new Handle(self, raw));
+            return raw;
         }
     }
 
@@ -167,5 +184,27 @@ public final class ImprovedNoiseNativeOps {
     ) {
         long h = handle(self, p, xo, yo, zo);
         return PaperNativeImprovedNoise.nativeNoise(h, x, y, z, yScale, yMax);
+    }
+
+    // ---------- observability (bench / self-test; not on the hot path) ----------
+
+    /** Handles currently registered (stale entries until next expunge). */
+    public static int liveHandles() {
+        int n = 0;
+        for (int i = 0; i < STRIPES; i++) {
+            final Map<ImprovedNoise, Handle> s = STRIPE_MAPS[i];
+            synchronized (s) { n += s.size(); }
+        }
+        return n;
+    }
+
+    /** Handles freed by the reaper so far (monotonic). */
+    public static long freedHandles() {
+        return FREED.get();
+    }
+
+    /** Force an expunge tick now (bench/self-test; also idempotent). */
+    public static void expungeNow() {
+        expunge();
     }
 }
